Issue #220 - Fixed problem with board title spacing, task tags, and colours

--- a/styles/Board.css
+++ b/styles/Board.css
@@ -53,6 +53,8 @@
 
 .header h4 {
     color: var(--primary-text);
+    width: 100%;
+    text-align: center;
 }
 
 .subtitle {
@@ -220,6 +222,7 @@ select {
 .task-details {
     margin-top: 10px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     gap: 10px;
 }
